--- a/src/styles/components/chatMessage.scss
+++ b/src/styles/components/chatMessage.scss
@@ -1,18 +1,19 @@
 @use "../globals" as *;
 
 .chat {
+  display: flex;
+  flex-direction: column;
   .user,
   .curr-user {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: inline-block;
     position: relative;
     width: max-content;
     max-width: 60%;
     background-color: rgb(76, 93, 214, 0.8);
     border-radius: 5rem;
-    margin: 0.5rem;
-    padding: 1rem;
+    margin: 0.25rem 0;
+    padding: 1.5rem;
+    overflow-wrap: break-word;
     .img-wrapper {
       @include flexCenter(row);
       background-color: rgb(76, 93, 214, 0.8);
@@ -23,7 +24,7 @@
       position: absolute;
       left: 0;
       top: 50%;
-      transform: translate(-125%, -50%);
+      transform: translate(-105%, -50%);
       img {
         width: 100%;
         height: 100%;
@@ -37,8 +38,8 @@
     margin-left: auto;
     .img-wrapper {
       left: unset;
+      transform: translate(105%, -50%);
       right: 0;
-      transform: translate(125%, -50%);
       background-color: rgb(0, 152, 198, 0.8);
     }
   }
@@ -46,8 +47,6 @@
 
 @media (max-width: $bp-phone) {
   .chat {
-    padding: 1rem 2.25rem;
-    padding-right: 2.75rem;
     .user,
     .curr-user {
       max-width: 100%;
@@ -57,9 +56,6 @@
         width: 30px;
         height: 30px;
       }
-    }
-    &::-webkit-scrollbar {
-      width: 0;
     }
   }
 }
